--- a/readme.org
+++ b/readme.org
@@ -43,10 +43,10 @@ So below I will use above aliases.
 - $(a,b)$ - the greatest common divisor of $a$ and $b$
 - $[a,b]$ - the least common multiple of $a$ and $b$
   
-* Namespace ~vk.ntheory.basic~
+* Some basic functions ~vk.ntheory.basic~
 
-Namespace ~vk.ntheory.basic~ contains some common functions, which
-can be used directly or by other namespaces.
+This section cover namespace ~vk.ntheory.basic~. It contains some
+common functions, which can be used directly or by other namespaces.
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.basic :as b])
@@ -222,37 +222,39 @@ $$
 : 36
 : 
 
-* Namespace ~vk.ntheory.primes~
+* Primes and Integer Factorization ~vk.ntheory.primes~
 
-Namespace ~vk.ntheory.primes~ primary designed for integer factorization
-and get list of primes. One can use ~primes~ namespace as:
+This section cover namespace ~vk.ntheory.primes~. It primary designed
+for integer factorization and get list of primes. One can use ~primes~
+namespace as:
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.primes :as p])
 #+end_src
 
-
 ** Performance and cache
 
 This library is designed to work with realtive small integers. Library
-keep in cache least divisor table for fast integer factorization.
-Cache grows automatically. The strategy of growing is extends cache to
-the least power of ~10~ more than required number. For instance, if
-client asked to factorize number ~18~, cache grows to ~100~, if client
-asked to factorize number ~343~, cache grows to ~1000~. List of primes
-also cached and recalculated together with least divisor
-table. Recalculation is not incremental, but every recalculation of
-least divisor table make a table which is in ~10~ times more than
-previous, and time for previous calculation is ~10~ times less than
-for new one. So we can say that recalculation spent almost all time
-for recalculate latest least divisor table.
+keep in cache least prime divisor table for fast integer
+factorization.  Least prime divisor of an positive integer is least
+divisor, but not ~1~.  Cache grows automatically. The strategy of
+growing is extends cache to the least power of ~10~ more than required
+number. For instance, if client asked to factorize number ~18~, cache
+grows to ~100~, if client asked to factorize number ~343~, cache grows
+to ~1000~. List of primes also cached and recalculated together with
+least prime divisor table. Recalculation is not incremental, but every
+recalculation of least prime divisor table make a table which is in
+~10~ times more than previous, and time for previous calculation is
+~10~ times less than for new one. So we can say that recalculation
+spent almost all time for recalculate latest least prime divisor
+table.
 
-Internally, least  divisor table is java array of int, so to store
-least divisor table for first ~1 000 000~ number approximately ~4M~
+Internally, least prime divisor table is java array of ~int~, so to store
+least prime divisor table for first ~1 000 000~ number approximately ~4M~
 memory is required, ~4~ bytes per number.
 
-There is a limit for max size of least divisor table. It is value of
-~max-int~
+There is a limit for max size of least prime divisor table. It is value of
+~max-int~:
 
 #+begin_src clojure
   p/max-int
@@ -272,7 +274,7 @@ Cache can be reset:
 : {:least-divisor-table , :primes , :upper 0}
 : 
 
-Least  divisor table is implementation details, but one can see
+Least prime divisor table is implementation details, but one can see
 it:
 
 #+begin_src clojure
@@ -287,12 +289,12 @@ it:
 :  :upper 10}
 : 
 
-For number ~n~ least divisor table contains least divisor of number
-~n~ more than ~1~ at index ~n~. Actually least divisor(but not ~1~) is
-a prime.  For instance, least divisor of number ~6~ is ~2~. If number
-~n > 1~ is a prime, least divisor is ~n~ and conversely. So at index
-~7~ least divisor table contains ~7~. Index zero is not used, index
-~1~ is a special case and value for index ~1~ is ~1~.
+For number ~n~ least prime divisor table contains least prime divisor
+of number ~n~ at index ~n~.  For instance, least prime divisor of
+number ~6~ is ~2~. If number ~n > 1~ is a prime, least prime divisor
+is ~n~ and conversely. So at index ~7~ least prime divisor table
+contains ~7~. Index zero is not used, index ~1~ is a special case and
+value for index ~1~ is ~1~.
 
 ** Primes
 
@@ -341,6 +343,9 @@ Integer $1$ is not a prime and is not a composite
 #+RESULTS:
 : true
 : 
+
+So all natural numbers can be divided into 3 categories: prime,
+composite, one.
 
 Every integer more than $1$ can be represented uniquely as a product
 of primes.
@@ -454,9 +459,11 @@ Conversion function is the same as for 3-rd representation:
 : 360
 : 
 
-Implementation of factorization use least  divisor table. To
-factorize number ~n~ it is enough to calculate least divisor table
-with size less or equals to $\sqrt n$. 
+Implementation of factorization use least prime divisor
+table. Actually least prime divisor table is a kind of linked list, to
+get next least prime divisor of an integer ~n~ need just divide ~n~ on
+least prime divisor ~p~, and quotient ~n/p~ is an index of next least
+prime divisor of integer ~n/p~ and therefore divisor ~n~.
 
 ** Check functions
 
@@ -474,7 +481,11 @@ more check functions:
 - ~check-prime~
 - ~check-odd-prime~      
 
-* Namespace ~vk.ntheory.ar-func~
+* Arithmetical functions ~vk.ntheory.ar-func~
+
+This section cover namespace ~vk.ntheory.primes~. It contains some
+well known arithmetical functions and also functions which allow build
+new arithmetical functions.
 
 ** Divisors
 
@@ -489,13 +500,13 @@ function. List of divisors is unordered.
 : (1 2 3 6 5 10 15 30)
 : 
 
-** Arithmetical functions
+** Arithmetical function
 
 Arithmetical function is an any function which accept natural number
 and return complex number $f: \mathbf N \to \mathbf C$. The library mostly works
 with functions which also returns integer $f: \mathbf N \to \mathbf Z$.
 
-*** Function equality
+** Function equality
 
 Two arithmetical function $f$ and $g$ are equal if $f(n)=g(n)$ for all
 natual $n$. There is helper function ~f-equlas~ which compare two
@@ -517,7 +528,7 @@ sequence of natural number we can for example do next:
   (f/f= f g (filter even? (range 1 100)))
 #+end_src
 
-*** Additive functions
+** Additive functions
 
 Additive function is a function for which
 
@@ -532,7 +543,7 @@ If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then:
 
 $$ f(n) = \sum_{i=1}^{k} f({p_i}^{a_i}) $$
 
-*** Multiplicative functions
+** Multiplicative functions
 
 Multiplicative function is a function not equal to zero for all n
 for which 
@@ -548,7 +559,7 @@ calculate a function on power of primes. If $n = p_1^{a_1} p_2^{a_2}
 
 $$ f(n) = \prod_{i=1}^{k} f({p_i}^{a_i}) $$
 
-*** Higher order function for define multiplicative and additive functions
+** Higher order function for define multiplicative and additive functions
 
 As we have seen, to define either multiplicative or additive function
 it is enough define function on power of a prime.  There is helper
@@ -578,10 +589,9 @@ With helper function it can be defined as
 
 Of course there is predefined function ~divisors-count~, but it
 is an example how to define custom function.
+** Some additive functions
 
-*** Some additive functions
-
-**** Count of distinct primes - $\omega$
+*** Count of distinct primes - $\omega$
 
 Count of distinct primes is a number of distinct primes which
 divides given $n$. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then $\omega = k$.
@@ -594,7 +604,7 @@ divides given $n$. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then $\omega = k
 : 2
 : 
 
-**** Total count of primes - $\Omega$
+*** Total count of primes - $\Omega$
 
 Total count of primes is a number of primes and power of primes
 which divides $n$. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then:
@@ -609,9 +619,9 @@ $$\Omega = a_1 + a_2 + \dots + a_k$$
 : 3
 : 
 
-*** Some multiplicative functions
+** Some multiplicative functions
 
-**** Mobius function - $\mu$.
+*** Mobius function - $\mu$.
 
 Mobius function defined as:
 
@@ -632,7 +642,7 @@ For example, $\mu(6)=\mu(2 \cdot 3)=1$
 : 1
 : 
 
-**** Euler totient function - $\phi$
+*** Euler totient function - $\phi$
 
 Euler totient function  is a count of numbers relative  prime to given
 number ~n~.  Totient function can be calculated by formula:
@@ -650,7 +660,7 @@ For example, count of numbers relative prime to $6$ are $1$ and $5$, so $\phi(6)
 : 2
 : 
 
-**** Unit function - $\epsilon$
+*** Unit function - $\epsilon$
 
 Unit function defined as
 
@@ -667,7 +677,7 @@ $$ \epsilon(n) = \begin{cases}
 : 0
 : 
 
-**** Constant one function - $1$
+*** Constant one function - $1$
 
 $$ 1(n) = 1 $$
 
@@ -679,7 +689,7 @@ $$ 1(n) = 1 $$
 : 1
 : 
 
-**** Divisors count - $\sigma_0$
+*** Divisors count - $\sigma_0$
 
 Divisors count is number of divisors which divides given number $n$.
 
@@ -695,7 +705,7 @@ For example, number $64$ has $4$ divisors, namely $1,2,3,6$, so $\sigma_0(6)=4$
 : 4
 : 
 
-**** Divisors sum - $\sigma_1$
+*** Divisors sum - $\sigma_1$
 
 
 $$ \sigma_1(n) = \sum_{d | n} d $$
@@ -710,7 +720,7 @@ For number 6 it is $12 = 1 + 2 + 3 + 6$
 : 12
 : 
 
-**** Divisors square sum
+*** Divisors square sum
 
 $$ \sigma_2(n) = \sum_{d | n} d^2 $$
 
@@ -724,7 +734,7 @@ For number 6 it is $50 = 1^2 + 2^2 + 3^2 + 6^2$
 : 50
 : 
 
-**** Divisors higher order function - $\sigma_{x}$
+*** Divisors higher order function - $\sigma_{x}$
 
 In general $\sigma_x$ function is a sum of x-th powers divisors of given n
 
@@ -745,7 +755,7 @@ accept ~x~ and return appropriate function.
   (def my-divisors-square-sum (f/divisors-sum-x 2))
 #+end_src
 
-**** Liouville - $\lambda$
+*** Liouville - $\lambda$
 
 Liouville function can be defind by formula:
 
@@ -761,9 +771,9 @@ where [[*Total count of primes - $\Omega$][$\Omega$]] have been descibed above.
 : 1
 : 
 
-*** Some other arithmetic functions
+** Some other arithmetic functions
 
-**** Mangoldt - $\Lambda$
+*** Mangoldt - $\Lambda$
 
 $$\Lambda(n) = \begin{cases}
    \log p,& \text{if $n$ is power of prime i.e. $n = p^k$} \\
@@ -817,7 +827,7 @@ where [[*Mangoldt - $\Lambda$][$\Lambda$]] have been described above
 : 0.6931471805599453
 : 
 
-*** Dirichlet convolution
+** Dirichlet convolution
 
 For two arithmetic functions $f$ and $g$ Dirichlet convolution is a
 new arithmetic function defined as
